# aiogram-template

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  ruff.toml
app/: main.py
app/core/: settings.py
app/handlers/: common.py  commons.py
app/keyboards/: start.py
