[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = ["Andrey K <andrey0kozyrev0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
ruff = "^0.6.4"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
redis = "^5.0.8"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
